# llvm-project

clang/tools/cir-opt/: CMakeLists.txt  cir-opt.cpp
mlir/include/mlir/Analysis/: MLInlineAdvisor.h  MLInlineModelFeatureMaps.h
mlir/include/mlir/Transforms/: Inliner.h  Passes.td
mlir/lib/Analysis/: CMakeLists.txt  MLInlineAdvisor.cpp  MLInlineModelFeatureMaps.cpp
mlir/lib/Transforms/: InlinerPass.cpp
mlir/lib/Transforms/Utils/: Inliner.cpp
mlir/test/Transforms/: inlining-dump-default-pipeline.mlir  inlining-ml-basic.mlir  inlining-ml-dead-callee.mlir  inlining-ml-recursive.mlir  inlining-ml-skip-unreachable.mlir
